fixed horizontal scrolling issue part 3

--- a/reset.css
+++ b/reset.css
@@ -118,8 +118,6 @@ section {
 }
 
 html {
-  width: 100%;
-  overflow-x: hidden;
   font-size: 62.5%;
   -webkit-text-size-adjust: none; /* for iOS Safari */
   text-size-adjust: none; /* for other mobile browsers */
@@ -127,6 +125,12 @@ html {
 
 body {
   font-size: 1.6rem;
+}
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 a,
